add git workflow action

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -22,6 +22,6 @@ on:
             python -m pip install --upgrade pip
             pip install pytest
             if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        - name: run tests``
+        - name: Run tests
           run: |
             pytest tests/ -v
