--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -24,4 +24,5 @@ jobs:
       - name: Run linter check (suggestions only, no modifications)
         run: ruff check .
 
-      - name: Run formatter check (error if f
+      - name: Run formatter check (error if formatting needee)
+        run: ruff format --check .
