--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -21,8 +21,16 @@ jobs:
       - name: Install Ruff
         run: pip install ruff==0.4.4
 
-      - name: Run linter check (suggestions only, no modifications)
-        run: ruff check .
+#      - name: Run linter check (suggestions only, no modifications)
+#        run: ruff check .
 
-      - name: Run formatter check (error if formatting needee)
-        run: ruff format --check .
+      - name: Run linter check
+        run: ruff check --fix.
+
+      - name: Run formatter check (error if formatting needed)
+        run: ruff format .
+
+      - name: Commit changes
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: 'style: auto-fix linting and formatting issues'
